Commit Before Initial Submission

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </div>
         </div>
             <div id="Actual-spaces-for-works">
+                    <div id="box1">
 
+                    </div>
+                        <div id="box2">
+
+                        </div>
             </div>
     
        
